--- a/next_ecommerce/package.json
+++ b/next_ecommerce/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
+    "json-web-token": "^3.2.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
